[project]
name = "bliplot"
version = "0.1.3"
description = "Terminal text-based plotting utility"
readme = "README.md"
authors = [
    { name = "abdallah-azzouni", email = "xara25az@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
